Refactor ISBicScore class and add new index calculation method
Simplified and reordered code within the ISBicScore class for better readability and maintainability. Added a new private method getRowIndex to calculate composite row indices based on dimensions and values. Reorganized fields to ensure they are properly initialized and removed redundant comments. Existing functionalities remain unchanged.